--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dbmate": "^1.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
     "supertest": "^6.3.3"
   }
 }
